@@ -20,8 +20,8 @@ Sharing (CORS) preflight requests.
 
 ``` hcl
 module "cors" {
-  source = "github.com/squidfunk/terraform-aws-api-gateway-enable-cors"
-  version = "0.3.0"
+  source = "squidfunk/api-gateway-enable-cors/aws"
+  version = "0.3.1"
 
   api_id          = "<api_id>"
   api_resource_id = "<api_resource_id>"
