@@ -25,11 +25,11 @@
 # local.*
 locals {
   headers = map(
-      "Access-Control-Allow-Headers"    , "'${join(",", var.allow_headers)}'",
-      "Access-Control-Allow-Methods"    , "'${join(",", var.allow_methods)}'",
-      "Access-Control-Allow-Origin"     , "'${var.allow_origin}'",
-      "Access-Control-Max-Age"          , "'${var.allow_max_age}'",
-      "Access-Control-Allow-Credentials", var.allow_credentials ? "'true'" : ""
+    "Access-Control-Allow-Headers", "'${join(",", var.allow_headers)}'",
+    "Access-Control-Allow-Methods", "'${join(",", var.allow_methods)}'",
+    "Access-Control-Allow-Origin", "'${var.allow_origin}'",
+    "Access-Control-Max-Age", "'${var.allow_max_age}'",
+    "Access-Control-Allow-Credentials", var.allow_credentials ? "'true'" : ""
   )
 
   # Pick non-empty header values
@@ -46,7 +46,9 @@ locals {
   parameter_names = formatlist("method.response.header.%s", local.header_names)
 
   # Map parameter list to "true" values
-  true_list = split("|", replace(join("|", local.parameter_names), "/[^|]+/", "true"))
+  true_list = split("|",
+    replace(join("|", local.parameter_names), "/[^|]+/", "true")
+  )
 
   # Integration response parameters
   integration_response_parameters = zipmap(
